fix: Docker deployment assets

--- a/.env.example
+++ b/.env.example
@@ -58,8 +58,13 @@ APP_URL=http://localhost
 
 # Domain settings for cookies and sessions
 # These settings are required if you are running the application on a different port or subdomain
-#SANCTUM_STATEFUL_DOMAINS=yoursubdomain.yourdomain.com:yourport
-#SESSION_DOMAIN=.yourdomain.com
+# SANCTUM_STATEFUL_DOMAINS=yoursubdomain.yourdomain.com:yourport
+# SESSION_DOMAIN=.yourdomain.com
+
+# The list of trusted proxies, which are used to determine the client's IP address
+# Uncomment and adjust this if your server is behind a proxy, like the optional Caddy server in the Docker setup
+# You can enable all sources with the below setting, or you can provide a list of IP addresses or ranges for more specific and secure configuration
+# TRUSTED_PROXIES=*
 
 #############################
 ### Advanced app features ###
@@ -159,6 +164,10 @@ SAIL_XDEBUG_ENABLED=false
 SAIL_XDEBUG_PORT=9003
 SAIL_XDEBUG_MODE=develop,debug
 SAIL_XDEBUG_CONFIG="client_host=host.docker.internal"
+
+# SSL settings for Sail
+SERVER_NAME=yaffa.test
+SSL_DOMAIN=yaffa.test
 
 # Telescope should not be enabled, unless Composer dev dependencies are installed
 TELESCOPE_ENABLED=FALSE
