--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
         "nunomaduro/phpinsights": "^2.0",
         "phpunit/phpunit": "^10.0",
         "roquie/laravel-dusk-select2": "dev-feature/search_selector_delay",
+        "ryoluo/sail-ssl": "^1.3",
         "spatie/laravel-ignition": "^2.0"
     },
     "config": {
