--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,23 @@
 services:
+    nginx:
+        image: 'nginx:latest'
+        ports:
+            - '${HTTP_PORT:-8000}:80'
+            - '${SSL_PORT:-443}:443'
+        environment:
+            - SSL_PORT=${SSL_PORT:-443}
+            - APP_SERVICE=${APP_SERVICE:-laravel.test}
+            - SERVER_NAME=${SERVER_NAME:-localhost}
+            - SSL_DOMAIN=${SSL_DOMAIN:-localhost}
+            - SSL_ALT_NAME=${SSL_ALT_NAME:-DNS:localhost}
+        volumes:
+            - 'sail-nginx:/etc/nginx/certs'
+            - './vendor/ryoluo/sail-ssl/nginx/templates:/etc/nginx/templates'
+            - './vendor/ryoluo/sail-ssl/nginx/generate-ssl-cert.sh:/docker-entrypoint.d/99-generate-ssl-cert.sh'
+        depends_on:
+            - ${APP_SERVICE:-laravel.test}
+        networks:
+            - sail
     yaffa.test:
         build:
             context: ./vendor/laravel/sail/runtimes/8.3
@@ -74,5 +93,7 @@ networks:
             config:
                 - subnet: 172.120.19.0/24
 volumes:
+    sail-nginx:
+        driver: local
     sail-mysql:
         driver: local
