--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
         "phpunit/phpunit": "^10.0",
         "roquie/laravel-dusk-select2": "dev-feature/search_selector_delay",
         "ryoluo/sail-ssl": "^1.3",
+        "spatie/db-dumper": "^3.8",
         "spatie/laravel-ignition": "^2.0"
     },
     "config": {
