--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/ui": "^4.2",
         "openai-php/laravel": "^0.8.1",
+        "riverskies/laravel-mobile-detect": "^1.3",
         "roach-php/laravel": "^3.1",
         "sentry/sentry-laravel": "^4.1",
         "simshaun/recurr": "^5.0",
