--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "@popperjs/core": "^2.11.6",
         "axios": "^1.9.0",
         "bootstrap": "^5.3.5",
-        "datatables-contextual-actions": "github:kantorge/datatables-contextual-actions#fix/remove_orphaned_dividers",
+        "datatables-contextual-actions": "github:kantorge/datatables-contextual-actions#custom_package",
         "datatables.net-bs5": "^2.2.2",
         "datatables.net-responsive-bs5": "^3.0.4",
         "datatables.net-select-bs5": "^3.0.0",
@@ -48,6 +48,7 @@
         "rrule": "^2.7.1",
         "select2": "^4.0.13",
         "select2-bootstrap-5-theme": "^1.3.0",
+        "sweetalert2": "^11.17.2",
         "v-calendar": "^3.1",
         "vanillajs-datepicker": "^1.3.4",
         "vform": "^2.1.2",
