--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -140,7 +140,7 @@ jobs:
         run: php artisan serve --no-reload &
 
       - name: Run Dusk Tests
-        run: php artisan dusk
+        run: php artisan dusk -vvv
 
       - name: Upload Screenshots
         if: failure()
