test: optimize some Laravel Dusk tests and their workflow files

--- a/.env.dusk.ci
+++ b/.env.dusk.ci
@@ -3,6 +3,7 @@ APP_ENV=testing
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://yaffa.test
+DUSK_DRIVER_URL=http://127.0.0.1:9515
 APP_SERVICE=yaffa.test
 
 LOG_CHANNEL=stack
