--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,7 +15,6 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      # Steps for testing
       - name: Check out the repository
         uses: actions/checkout@v2
 
@@ -32,7 +31,6 @@ jobs:
           echo "github.event_name is ${{ github.event_name }}"
           echo "github.ref_name is ${{ env.DOCKER_VERSION_TAG }}"
 
-      # Steps for building and pushing
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -45,15 +43,30 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Configure Docker cache
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: buildx-${{ github.ref_name }}-${{ github.sha }}
+          restore-keys: |
+            buildx-${{ github.ref_name }}-
+
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
+          context: .
+          file: ./docker/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            kantorge/yaffa:latest
             kantorge/yaffa:${{ env.DOCKER_VERSION_TAG }}
-          context: .
-          file: ./docker/Dockerfile
+            ${{ env.DOCKER_VERSION_TAG != 'test' && 'kantorge/yaffa:latest' || '' }}
           build-args: |
             BRANCH=main
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+
+      - name: Move cache to current path
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
