fix: add Redis and other components to Docker-based installation

--- a/.env.ci
+++ b/.env.ci
@@ -32,6 +32,8 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+RUNS_SCHEDULER=FALSE
+
 MAIL_MAILER=array
 MAIL_HOST=null
 MAIL_PORT=null
