--- a/.env.example
+++ b/.env.example
@@ -111,13 +111,14 @@ LOG_LEVEL=error
 
 ### Internal tools and services ###
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-QUEUE_CONNECTION=database
-SESSION_DRIVER=file
+CACHE_DRIVER=redis
+QUEUE_CONNECTION=redis
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+RUNS_SCHEDULER=TRUE
 
 # Enlightn - optional, if you want to run the Enlightn security checks and save the results to their online dashboard
 ENLIGHTN_USERNAME=
