--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
         "axios": "^1.9.0",
         "bootstrap": "^5.3.5",
         "datatables-contextual-actions": "github:kantorge/datatables-contextual-actions#custom_package",
-        "datatables.net-bs5": "^2.2.2",
+        "datatables.net-bs5": "^2.3.1",
         "datatables.net-responsive-bs5": "^3.0.4",
         "datatables.net-select-bs5": "^3.0.0",
+        "datatables.net-vue3": "^3.0.4",
         "driver.js": "^1.3.1",
         "jquery": "^3.6.3",
         "jquery-csv": "^1.0.21",
