--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
         "autoprefixer": "^10.4.13",
         "cross-env": "^7.0.3",
         "css-loader": "^6.7.3",
+        "eslint": "^9.36.0",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
+        "eslint-plugin-vue": "^10.5.0",
         "file-loader": "^6.2.0",
         "laravel-mix": "^6.0.49",
         "mini-css-extract-plugin": "^2.7.2",
@@ -33,8 +37,8 @@
         "@fortawesome/fontawesome-free": "^6.5.2",
         "@fortawesome/free-brands-svg-icons": "^6.5.2",
         "@popperjs/core": "^2.11.6",
-        "bootstrap": "^5.3.8",
         "axios": "^1.12.0",
+        "bootstrap": "^5.3.8",
         "datatables-contextual-actions": "github:kantorge/datatables-contextual-actions#custom_package",
         "datatables.net-bs5": "^2.3.3",
         "datatables.net-responsive-bs5": "^3.0.5",
