Set new `ENV` variables

--- a/.env.example
+++ b/.env.example
@@ -56,6 +56,13 @@ MAIL_FROM_NAME=YAFFA
 # The URL of the application, used for generating links in emails and to set the base URL for the application
 APP_URL=http://localhost
 
+APP_LOCALE=en
+APP_FALLBACK_LOCALE=en
+APP_FAKER_LOCALE=en_US
+APP_MAINTENANCE_DRIVER=file
+APP_MAINTENANCE_STORE=database
+BCRYPT_ROUNDS=12
+
 # Domain settings for cookies and sessions
 # These settings are required if you are running the application on a different port or subdomain
 # SANCTUM_STATEFUL_DOMAINS=yoursubdomain.yourdomain.com:yourport
@@ -105,16 +112,19 @@ APP_DEBUG=false
 
 # You can specify the log channel to be used for logging
 LOG_CHANNEL=stack
+LOG_STACK=single
 
 # The minimum log level to be written to the log files
 LOG_LEVEL=error
 
 ### Internal tools and services ###
-BROADCAST_DRIVER=log
-CACHE_DRIVER=redis
+BROADCAST_CONNECTION=log
+CACHE_STORE=redis
 QUEUE_CONNECTION=redis
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
+SESSION_ENCRYPT=false
+SESSION_PATH=/
 REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
