--- a/.env.ci
+++ b/.env.ci
@@ -22,8 +22,8 @@ DB_PASSWORD=password
 
 ALPHA_VANTAGE_KEY=ABC
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+BROADCAST_CONNECTION=log
+CACHE_STORE=file
 QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
