--- a/.env.dusk.ci
+++ b/.env.dusk.ci
@@ -18,8 +18,8 @@ DB_DATABASE=yaffa
 DB_USERNAME=root
 DB_PASSWORD=root
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+BROADCAST_CONNECTION=log
+CACHE_STORE=file
 QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
