--- a/composer.json
+++ b/composer.json
@@ -11,50 +11,49 @@
     "license": "MIT",
     "require": {
         "php": "^8.3",
-        "beyondcode/laravel-mailbox": "^3.1",
-        "biscolab/laravel-recaptcha": "^6.0",
-        "bkwld/cloner": "^3.11",
+        "beyondcode/laravel-mailbox": "^4.0",
+        "biscolab/laravel-recaptcha": "^6.1",
+        "bkwld/cloner": "^3.12",
         "diglactic/laravel-breadcrumbs": "^9.0",
-        "enlightn/enlightn": "^2.1",
-        "fakerphp/faker": "^1.13",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "enlightn/enlightn": "^2.8",
+        "fakerphp/faker": "^1.23",
+        "guzzlehttp/guzzle": "^7.8",
         "kantorge/laravel-currency-exchange-rates": "^0.0.3",
         "laracasts/utilities": "^3.2",
-        "laravel/framework": "^10.0",
-        "laravel/sanctum": "^3.3",
-        "laravel/ui": "^4.2",
-        "openai-php/laravel": "^0.8.1",
+        "laravel/framework": "^11.46",
+        "laravel/sanctum": "^4.0",
+        "laravel/ui": "^4.4",
+        "openai-php/laravel": "^0.13",
         "riverskies/laravel-mobile-detect": "^1.3",
         "roach-php/laravel": "^3.1",
-        "sentry/sentry-laravel": "^4.1",
+        "sentry/sentry-laravel": "^4.3",
         "simshaun/recurr": "^5.0",
-        "spatie/laravel-model-flags": "^1.1",
-        "spatie/laravel-onboard": "^2.4",
+        "spatie/laravel-model-flags": "^1.3",
+        "spatie/laravel-onboard": "^2.6",
         "symfony/http-client": "^7.2",
-        "tightenco/ziggy": "^1.3"
+        "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
         "alebatistella/duskapiconf": "^1.2",
-        "barryvdh/laravel-debugbar": "^3.5",
-        "barryvdh/laravel-ide-helper": "^2.12",
-        "deployer/deployer": "^7.3",
+        "barryvdh/laravel-debugbar": "^3.10",
+        "barryvdh/laravel-ide-helper": "^3.0",
+        "deployer/deployer": "^7.5",
         "imanghafoori/laravel-microscope": "^1.0",
-        "kkomelin/laravel-translatable-string-exporter": "^1.17",
-        "larastan/larastan": "^2.0",
+        "kkomelin/laravel-translatable-string-exporter": "^1.22",
+        "larastan/larastan": "^2.8",
         "laravel/dusk": "^8.2",
-        "laravel/pint": "^1.1",
-        "laravel/sail": "^1.16",
-        "laravel/telescope": "^4.6",
-        "laravel/tinker": "^2.5",
-        "mockery/mockery": "^1.4.2",
+        "laravel/pint": "^1.13",
+        "laravel/sail": "^1.26",
+        "laravel/telescope": "^5.0",
+        "laravel/tinker": "^2.9",
+        "mockery/mockery": "^1.6",
         "nikaia/translation-sheet": "dev-feature/config_empty_behavior",
-        "nunomaduro/collision": "^7.0",
-        "nunomaduro/phpinsights": "^2.0",
-        "phpunit/phpunit": "^10.0",
+        "nunomaduro/collision": "^8.0",
+        "nunomaduro/phpinsights": "^2.11",
+        "phpunit/phpunit": "^11.0.1",
         "roquie/laravel-dusk-select2": "dev-feature/search_selector_delay",
         "ryoluo/sail-ssl": "^1.3",
-        "spatie/db-dumper": "^3.8",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/db-dumper": "^3.8"
     },
     "config": {
         "discard-changes": true,
@@ -114,5 +113,6 @@
             "type": "vcs",
             "url": "https://github.com/kantorge/laravel-dusk-select2"
         }
-    ]
+    ],
+    "minimum-stability": "stable"
 }
