--- a/.env.dusk.ci
+++ b/.env.dusk.ci
@@ -3,15 +3,21 @@ APP_ENV=testing
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://yaffa.test
+ASSET_URL=${APP_URL}
 DUSK_DRIVER_URL=http://127.0.0.1:9515
 APP_SERVICE=yaffa.test
+
+APP_LOCALE=en
+APP_FALLBACK_LOCALE=en
+APP_FAKER_LOCALE=en_US
+APP_MAINTENANCE_DRIVER=file
+APP_MAINTENANCE_STORE=database
+BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-
-# Localhost
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=yaffa
