--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,12 @@
         "biscolab/laravel-recaptcha": "^6.1",
         "bkwld/cloner": "^3.12",
         "diglactic/laravel-breadcrumbs": "^9.0",
-        "enlightn/enlightn": "^2.8",
-        "fakerphp/faker": "^1.23",
         "guzzlehttp/guzzle": "^7.8",
         "kantorge/laravel-currency-exchange-rates": "^0.0.3",
         "laracasts/utilities": "^3.2",
         "laravel/framework": "^11.46",
         "laravel/sanctum": "^4.0",
+        "laravel/telescope": "^5.0",
         "laravel/ui": "^4.4",
         "openai-php/laravel": "^0.13",
         "riverskies/laravel-mobile-detect": "^1.3",
@@ -38,13 +37,14 @@
         "barryvdh/laravel-debugbar": "^3.10",
         "barryvdh/laravel-ide-helper": "^3.0",
         "deployer/deployer": "^7.5",
+        "enlightn/enlightn": "^2.8",
+        "fakerphp/faker": "^1.23",
         "imanghafoori/laravel-microscope": "^1.0",
         "kkomelin/laravel-translatable-string-exporter": "^1.22",
         "larastan/larastan": "^2.8",
         "laravel/dusk": "^8.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
-        "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.9",
         "mockery/mockery": "^1.6",
         "nikaia/translation-sheet": "dev-feature/config_empty_behavior",
@@ -100,7 +100,7 @@
         "post-update-cmd": [
             "@php artisan ide-helper:generate",
             "@php artisan ide-helper:meta",
-            "@php artisan telescope:publish --ansi",
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
             "Illuminate\\Foundation\\ComposerScripts::postUpdate"
         ]
     },
