fix: various smaller updates and fixes

--- a/.env.example
+++ b/.env.example
@@ -56,11 +56,21 @@ MAIL_FROM_NAME=YAFFA
 # The URL of the application, used for generating links in emails and to set the base URL for the application
 APP_URL=http://localhost
 
+# System-wide defaults. The UI language is chosen per-user (See app/Http/Middleware/SetLocale.php).
+# These are fallback defaults only — users can override them in their profile or session.
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
+# Used during generation of fake data, mostly for testing and development
 APP_FAKER_LOCALE=en_US
+
+# Maintenance mode driver and storage (Laravel-related) — adjust if you run a clustered setup.
+# file = single-server maintenance mode file
+# database = store maintenance mode data in database (useful for multi-server setups)
 APP_MAINTENANCE_DRIVER=file
 APP_MAINTENANCE_STORE=database
+
+# Number of rounds used by bcrypt (higher = slower but stronger). Adjust to balance security vs CPU.
+# Default 12 is reasonable for most modern servers. Lower it in low-resource environments (not recommended).
 BCRYPT_ROUNDS=12
 
 # Domain settings for cookies and sessions
@@ -109,6 +119,9 @@ APP_ENV=production
 
 # Set this to true if you need to see detailed error messages
 APP_DEBUG=false
+
+# Laravel Telescope for debugging and monitoring - disable in production unless you really need it
+TELESCOPE_ENABLED=FALSE
 
 # You can specify the log channel to be used for logging
 LOG_CHANNEL=stack
@@ -179,9 +192,6 @@ SAIL_XDEBUG_CONFIG="client_host=host.docker.internal"
 # SSL settings for Sail
 SERVER_NAME=yaffa.test
 SSL_DOMAIN=yaffa.test
-
-# Telescope should not be enabled, unless Composer dev dependencies are installed
-TELESCOPE_ENABLED=FALSE
 
 # Debugbar should not be enabled, unless Composer dev dependencies are installed
 DEBUGBAR_ENABLED=FALSE
