Shift `ENV` variables

--- a/.env.ci
+++ b/.env.ci
@@ -39,7 +39,7 @@ MAIL_HOST=null
 MAIL_PORT=null
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_SCHEME=null
 MAIL_FROM_ADDRESS=test@yaffa.cc
 MAIL_FROM_NAME="${APP_NAME}"
 
