--- a/.env.dusk.ci
+++ b/.env.dusk.ci
@@ -41,7 +41,7 @@ MAIL_HOST=
 MAIL_PORT=
 MAIL_USERNAME=
 MAIL_PASSWORD=
-MAIL_ENCRYPTION=tls
+MAIL_SCHEME=tls
 MAIL_FROM_ADDRESS=dusk@yaffa.test
 MAIL_FROM_NAME="${APP_NAME}"
 
