--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": "^8.3",
         "beyondcode/laravel-mailbox": "^5.0",
-        "biscolab/laravel-recaptcha": "^6.1",
+        "biscolab/laravel-recaptcha": "dev-maintenance",
         "bkwld/cloner": "^3.14",
         "diglactic/laravel-breadcrumbs": "^10.0",
         "guzzlehttp/guzzle": "^7.8",
@@ -37,7 +37,6 @@
         "barryvdh/laravel-debugbar": "^3.15",
         "barryvdh/laravel-ide-helper": "^3.5",
         "deployer/deployer": "^7.5",
-        "enlightn/enlightn": "^2.8",
         "fakerphp/faker": "^1.23",
         "imanghafoori/laravel-microscope": "^1.0",
         "kkomelin/laravel-translatable-string-exporter": "^1.23",
@@ -110,6 +109,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/kantorge/laravel-dusk-select2"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/kantorge/laravel-recaptcha"
         }
     ],
     "minimum-stability": "stable"
