--- a/.env.example
+++ b/.env.example
@@ -49,7 +49,7 @@ MAIL_HOST=
 MAIL_PORT=
 MAIL_USERNAME=
 MAIL_PASSWORD=
-MAIL_ENCRYPTION=null
+MAIL_SCHEME=null
 MAIL_FROM_ADDRESS=info@yaffa.test
 MAIL_FROM_NAME=YAFFA
 
@@ -71,6 +71,8 @@ APP_MAINTENANCE_STORE=database
 
 # Number of rounds used by bcrypt (higher = slower but stronger). Adjust to balance security vs CPU.
 # Default 12 is reasonable for most modern servers. Lower it in low-resource environments (not recommended).
+PHP_CLI_SERVER_WORKERS=4
+
 BCRYPT_ROUNDS=12
 
 # Domain settings for cookies and sessions
@@ -142,10 +144,6 @@ REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 RUNS_SCHEDULER=TRUE
-
-# Enlightn - optional, if you want to run the Enlightn security checks and save the results to their online dashboard
-ENLIGHTN_USERNAME=
-ENLIGHTN_API_TOKEN=
 
 # Sentry - optional, if you want to use Sentry for error reporting
 SENTRY_LARAVEL_DSN=
