--- a/composer.json
+++ b/composer.json
@@ -12,48 +12,48 @@
     "require": {
         "php": "^8.3",
         "beyondcode/laravel-mailbox": "^5.0",
-        "biscolab/laravel-recaptcha": "^6.1",
-        "bkwld/cloner": "^3.12",
-        "diglactic/laravel-breadcrumbs": "^9.0",
+        "biscolab/laravel-recaptcha": "dev-maintenance",
+        "bkwld/cloner": "^3.14",
+        "diglactic/laravel-breadcrumbs": "^10.0",
         "guzzlehttp/guzzle": "^7.8",
         "kantorge/laravel-currency-exchange-rates": "^0.0.3",
         "laracasts/utilities": "^3.2",
-        "laravel/framework": "^11.46",
+        "laravel/framework": "^12.33",
         "laravel/sanctum": "^4.0",
-        "laravel/telescope": "^5.0",
-        "laravel/ui": "^4.4",
+        "laravel/telescope": "^5.5",
+        "laravel/ui": "^4.6",
         "openai-php/laravel": "^0.13",
         "riverskies/laravel-mobile-detect": "^1.3",
-        "roach-php/laravel": "^3.1",
-        "sentry/sentry-laravel": "^4.3",
+        "roach-php/laravel": "^3.2",
+        "sentry/sentry-laravel": "^4.13",
         "simshaun/recurr": "^5.0",
-        "spatie/laravel-model-flags": "^1.3",
+        "spatie/laravel-model-flags": "^1.4",
         "spatie/laravel-onboard": "^2.6",
         "symfony/http-client": "^7.2",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
         "alebatistella/duskapiconf": "^1.2",
-        "barryvdh/laravel-debugbar": "^3.10",
-        "barryvdh/laravel-ide-helper": "^3.0",
+        "barryvdh/laravel-debugbar": "^3.15",
+        "barryvdh/laravel-ide-helper": "^3.5",
         "deployer/deployer": "^7.5",
-        "enlightn/enlightn": "^2.8",
         "fakerphp/faker": "^1.23",
         "imanghafoori/laravel-microscope": "^1.0",
-        "kkomelin/laravel-translatable-string-exporter": "^1.22",
-        "larastan/larastan": "^2.8",
+        "kkomelin/laravel-translatable-string-exporter": "^1.23",
+        "larastan/larastan": "^3.1",
         "laravel/dusk": "^8.2",
         "laravel/pint": "^1.13",
-        "laravel/sail": "^1.26",
-        "laravel/tinker": "^2.9",
+        "laravel/sail": "^1.41",
+        "laravel/tinker": "^2.10.1",
         "mockery/mockery": "^1.6",
         "nikaia/translation-sheet": "dev-feature/config_empty_behavior",
-        "nunomaduro/collision": "^8.0",
+        "nunomaduro/collision": "^8.6",
         "nunomaduro/phpinsights": "^2.11",
-        "phpunit/phpunit": "^11.0.1",
+        "phpunit/phpunit": "^11.5.3",
         "roquie/laravel-dusk-select2": "dev-feature/search_selector_delay",
-        "ryoluo/sail-ssl": "^1.3",
-        "spatie/db-dumper": "^3.8"
+        "ryoluo/sail-ssl": "^1.4",
+        "spatie/db-dumper": "^3.8",
+        "laravel/pail": "^1.2.2"
     },
     "config": {
         "discard-changes": true,
@@ -95,6 +95,10 @@
             "@php artisan ide-helper:meta",
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
             "Illuminate\\Foundation\\ComposerScripts::postUpdate"
+        ],
+        "dev": [
+            "Composer\\Config::disableProcessTimeout",
+            "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
         ]
     },
     "repositories": [
@@ -105,6 +109,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/kantorge/laravel-dusk-select2"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/kantorge/laravel-recaptcha"
         }
     ],
     "minimum-stability": "stable"
