wip: rework asset building and deployment strategy

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,9 +1,8 @@
 name: Build and Push Docker images for new version
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
+  release:
+    types: [published]
   workflow_dispatch:
     inputs:
       ref_name:
@@ -16,15 +15,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Set github.ref_name from workflow_dispatch
+      - name: Set version from workflow_dispatch
         if: github.event_name == 'workflow_dispatch'
         run: echo "DOCKER_VERSION_TAG=${{ github.event.inputs.ref_name }}" >> $GITHUB_ENV
 
-      - name: Set github.ref_name from tag
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
-        run: echo "DOCKER_VERSION_TAG=${{ github.ref_name }}" >> $GITHUB_ENV
+      - name: Set version from release tag
+        if: github.event_name == 'release'
+        run: echo "DOCKER_VERSION_TAG=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
 
       - name: Print github.ref_name
         run: |
