--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -7,72 +7,14 @@ permissions:
   contents: write
   pull-requests: write
 
-name: Release Please with Deployment
+name: Release Please
 
 jobs:
   release-please:
     runs-on: ubuntu-latest
-    environment: Private
     steps:
       - name: Run Release Please
         id: release
         uses: google-github-actions/release-please-action@v4
         with:
           target-branch: main
-
-      - uses: actions/checkout@v4
-        if: ${{ steps.release.outputs.release_created }}
-
-      - name: Setup PHP
-        if: ${{ steps.release.outputs.release_created }}
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: "8.3"
-
-      - name: Get composer cache directory
-        if: ${{ steps.release.outputs.release_created }}
-        run: echo "COMPOSER_CACHE_DIR=$(composer config cache-files-dir)" >> $GITHUB_ENV
-
-      - name: Cache composer dependencies
-        if: ${{ steps.release.outputs.release_created }}
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.COMPOSER_CACHE_DIR }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-composer-
-
-      - name: Install dependencies
-        if: ${{ steps.release.outputs.release_created }}
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-
-      - name: Configure SSH
-        if: ${{ steps.release.outputs.release_created }}
-        env:
-          SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          SSH_KNOWN_HOSTS: ${{ secrets.SSH_KNOWN_HOSTS }}
-          SSH_HOST: ${{ secrets.SSH_HOST }}
-          SSH_USER: ${{ secrets.SSH_USER }}
-        run: |
-          mkdir -p ~/.ssh/
-          echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
-          echo "$SSH_KEY" > ~/.ssh/private_key
-          chmod 600 ~/.ssh/private_key
-          cat >>~/.ssh/config <<END
-            Host host_name
-              HostName $SSH_HOST
-              User $SSH_USER
-              IdentityFile ~/.ssh/private_key
-              StrictHostKeyChecking no
-          END
-
-      - name: Deploy Yaffa
-        if: ${{ steps.release.outputs.release_created }}
-        env:
-          SSH_HOST: ${{ secrets.SSH_HOST }}
-          SSH_USER: ${{ secrets.SSH_USER }}
-          DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
-        uses: deployphp/action@master
-        with:
-          private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          known-hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
-          dep: yaffa
