--- a/package.json
+++ b/package.json
@@ -7,27 +7,20 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^6.0.3",
         "@vue/compiler-sfc": "^3.2.45",
         "autoprefixer": "^10.4.13",
         "baseline-browser-mapping": "^2.9.11",
         "concurrently": "^9.0.1",
         "cross-env": "^7.0.3",
-        "css-loader": "^6.7.3",
         "eslint": "^9.36.0",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-prettier": "^5.5.4",
         "eslint-plugin-vue": "^10.5.0",
-        "file-loader": "^6.2.0",
-        "mini-css-extract-plugin": "^2.7.2",
+        "laravel-vite-plugin": "^2.0.1",
         "postcss": "^8.4.31",
-        "postcss-loader": "^7.0.2",
-        "resolve-url-loader": "^5.0",
         "sass": "^1.57.1",
-        "sass-loader": "^13.2.0",
-        "style-loader": "^3.3.1",
-        "vue-loader": "^16.8.3",
-        "vite": "^7.3.0",
-        "laravel-vite-plugin": "^2.0.1"
+        "vite": "^7.3.0"
     },
     "dependencies": {
         "@amcharts/amcharts4": "^4.10.40",
@@ -55,8 +48,6 @@
         "v-calendar": "npm:@angelblanco/v-calendar@3.1.3",
         "vanillajs-datepicker": "^1.3.4",
         "vform": "^2.1.2",
-        "vue": "^3.5.20",
-        "webpack": "^5.101.3",
-        "@vitejs/plugin-vue": "^6.0.3"
+        "vue": "^3.5.20"
     }
 }
