--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,6 +9,10 @@ on:
         description: 'Reference name to simulate github.ref_name'
         required: true
         default: 'test'
+      platforms:
+        description: 'Platforms to build (comma-separated)'
+        required: false
+        default: 'linux/amd64'
 
 jobs:
   docker:
@@ -25,10 +29,19 @@ jobs:
         if: github.event_name == 'release'
         run: echo "DOCKER_VERSION_TAG=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
 
+      - name: Set platforms
+        run: |
+          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+            echo "BUILD_PLATFORMS=${{ github.event.inputs.platforms }}" >> $GITHUB_ENV
+          else
+            echo "BUILD_PLATFORMS=linux/amd64,linux/arm64" >> $GITHUB_ENV
+          fi
+
       - name: Print github.ref_name
         run: |
           echo "github.event_name is ${{ github.event_name }}"
           echo "github.ref_name is ${{ env.DOCKER_VERSION_TAG }}"
+          echo "platforms is ${{ env.BUILD_PLATFORMS }}"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -55,7 +68,7 @@ jobs:
         with:
           context: .
           file: ./docker/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ env.BUILD_PLATFORMS }}
           push: true
           tags: |
             kantorge/yaffa:${{ env.DOCKER_VERSION_TAG }}
