--- a/.env.example
+++ b/.env.example
@@ -174,7 +174,7 @@ COOKIEYES_ID=
 TS_SERVICE_ACCOUNT_EMAIL=
 TS_SERVICE_ACCOUNT_CREDENTIALS_FILE=
 TS_SPREADSHEET_ID=
-TS_LOCALES=
+TS_LOCALES=en,hu,fr
 
 # Laravel Sail settings
 WWWGROUP=1000
