--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "datatables.net-select-bs5": "^3.0.1",
         "datatables.net-vue3": "^3.0.4",
         "driver.js": "^1.3.6",
+        "flag-icons": "^7.5.0",
         "jquery": "^3.6.3",
         "jquery-csv": "^1.0.21",
         "json-rules-engine": "^7.2.1",
